# Omega-FX-V3

./: .gitignore  README_RUN.md  RELEASE_NOTES.md  RUN_DAILY_CHECK.bat  RUN_GATE.bat  RUN_SMOKE.bat  pyproject.toml
.github/workflows/: ci.yml
apps/: hud_streamlit.py
configs/: ftmo_v1.mt5.yaml.lock.json  ftmo_v1.yaml  ftmo_v1.yaml.lock.json
deploy/systemd/: ftmo-bot.env.example  ftmo-bot.service
docs/: GATE_RUN_CHECKLIST.md  flight_test_checklist.md  mission_plan.md
examples/: demo_paper.py  demo_simulation.py  run_with_config.py
reports/: sample_sim_report.json  sample_sim_report_v2.json
reports/bundle_summary/: summary.json  summary_table.csv
reports/bundle_summary/ftmo-v1-20251225T183707Z-772eba38-20251225-123708/: summary.json  summary_table.csv
reports/bundle_summary/ftmo-v1-20251225T184103Z-772eba38-20251225-124105/: summary.json  summary_table.csv
reports/forward_test_bundle/: run_context.json  state_snapshot.json
scripts/: analyze_bundles.py  freeze_config.py  gate_5day.ps1  gate_5day.sh  gate_daily_check.ps1  gate_daily_check.sh  gate_oneclick.ps1  gate_smoke.ps1  gate_smoke.sh  generate_daily_bundle.py  generate_sample_logs.py  run_farm_shadow_live.py  run_service_loop.py  run_sim_report.py  run_tournament_offline.py  start_service.ps1
src/ftmo_bot/: __init__.py
src/ftmo_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config_loader.py  test_execution_redteam.py  test_governor_redteam.py  test_reconcile_threading.py  test_rule_engine.py  test_simulator_v2.py  test_strategy_farm.py  test_strategy_sizer.py
(+82 files in other folders)
